# pkg/app/user/http/docs/swagger.json
@@ -49,13 +49,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.Error400"
+                            "$ref": "#/definitions/dto.Error400"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.Error500"
+                            "$ref": "#/definitions/dto.Error500"
                         }
                     }
                 }
@@ -98,13 +98,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.Error400"
+                            "$ref": "#/definitions/dto.Error400"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.Error500"
+                            "$ref": "#/definitions/dto.Error500"
                         }
                     }
                 }
@@ -112,7 +112,7 @@
         }
     },
     "definitions": {
-        "api.Error400": {
+        "dto.Error400": {
             "type": "object",
             "required": [
                 "code",
@@ -129,7 +129,8 @@
                     "example": 100000
                 },
                 "data": {
-                    "description": "业务数据\nin: body\nrequired: true"
+                    "description": "业务数据\nin: body\nrequired: true",
+                    "format": "object|array|string"
                 },
                 "message": {
                     "description": "提示信息\nin: body\nrequired: true",
@@ -157,7 +158,7 @@
                 }
             }
         },
-        "api.Error500": {
+        "dto.Error500": {
             "type": "object",
             "required": [
                 "code",
@@ -174,7 +175,8 @@
                     "example": 999999
                 },
                 "data": {
-                    "description": "业务数据\nin: body\nrequired: true"
+                    "description": "业务数据\nin: body\nrequired: true",
+                    "format": "object|array|string"
                 },
                 "message": {
                     "description": "提示信息\nin: body\nrequired: true",
@@ -214,13 +216,12 @@
             "properties": {
                 "code": {
                     "description": "错误码\nin: body\nrequired: true",
-                    "type": "integer",
-                    "format": "int",
-                    "example": 0
+                    "format": "int"
                 },
                 "data": {
                     "description": "数据体\nin: body\nrequired: true",
                     "type": "object",
+                    "format": "object",
                     "properties": {
                         "user": {
                             "$ref": "#/definitions/response.UserInfo"
@@ -269,13 +270,13 @@
             "properties": {
                 "code": {
                     "description": "错误码\nin: body\nrequired: true",
-                    "type": "integer",
-                    "format": "int",
-                    "example": 0
+                    "format": "int"
                 },
                 "data": {
                     "description": "数据体\nin: body\nrequired: true",
-                    "type": "string"
+                    "type": "string",
+                    "format": "string",
+                    "example": ""
                 },
                 "message": {
                     "description": "提示信息\nin: body\nrequired: true",
